fixed img issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -459,14 +459,19 @@ header .header-content {
     .aboutUs-btm:after{
         margin-top: 5px;
         margin-bottom: 10px;
+        color: #c32b3a;
+        text-align: center;
     }
 
     .bio-text h2{
         margin-top: 20px;
+        text-align: center;
+
     }
     .bio-text {
         padding-right: 10%;
         padding-left: 10%;
+        text-align: center;
     }
     #biopic{
         min-width: 101%;
